# project-quality-hub

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  integration.md  mcp_server_design.md
src/project_quality_hub/: __init__.py  cli.py
src/project_quality_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/project_quality_hub/core/: __init__.py  enhanced_interface.py  multi_branch.py  project_memory.py  project_mind.py  project_mind_interface.py  smart_incremental_update.py
src/project_quality_hub/quality/: __init__.py  ast_parser.py  quality_scorer.py  static_analyzers.py
src/project_quality_hub/server/: __init__.py  context.py  server.py  task_registry.py  tools.py  utils.py
tests/: test_ast_parser.py  test_imports.py  test_quality_scorer.py
